--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -16,6 +16,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <script
+      src="https://widget.cloudinary.com/v2.0/global/all.js"
+      type="text/javascript"
+    ></script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -38,7 +42,8 @@
       integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
       crossorigin="anonymous"
     />
-    <title>React App</title>
+
+    <title>Welcome to CoderShop</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
